CLAUDE MAXIMUM FIX: Final cleanup - Remove all forbidden terms, update Networks section, complete all fixes

--- a/public/beta/index.html
+++ b/public/beta/index.html
@@ -199,7 +199,7 @@
             <div class="grid grid-2">
                 <div style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #FFD700;">
                     <!-- TODO: Replace "VIBE™" with the correct feature name once provided by stakeholder -->
-                    <h3 style="color: #FFD700; margin-bottom: 1rem;">"The VIBE™ is Revolutionary"</h3>
+                    <h3 style="color: #FFD700; margin-bottom: 1rem;">VIBE™ Real-Time Overlays</h3>
                     <p style="font-size: 1rem; font-style: italic; color: var(--muted);">"Comments flowing over the video without interrupting? This is how we should consume content. Game changer."</p>
                     <p style="margin-top: 1rem; font-size: 0.9rem; color: #888;">— Early Beta Tester</p>
                 </div>
