--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -146,7 +146,7 @@
                 <img src="/assets/badges/badge-titanium.jpg" alt="Titanium Network Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--titanium);">Titanium Network Partner</h3>
-                    <p style="margin:0; font-size: 1.1rem;"><strong>Studio-Level Authority.</strong> This badge signals you are a content factory. Priority access to vetted talent. Early deal flow. Pipeline control. When brands see Titanium, they know you deliver.</p>
+                    <p style="margin:0; font-size: 1.1rem;">Studio-level authority. Networks gain priority access to vetted creator talent, early deal flow on franchise IP, and syndication opportunities. The badge system creates trust. Trust accelerates licensing. Vertical-first content scales across FAST channels and SVOD platforms while creators retain IP ownership.</p>
                     <ul style="margin-top: 1rem; padding-left: 1.5rem; color: var(--muted);">
                         <li>Priority access to V Badge creator pool</li>
                         <li>Early deal flow on validated IP</li>
