CLAUDE MAXIMUM FIX: Networks section header updated, all fixes complete

--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -112,8 +112,8 @@
 
     <section id="roi">
         <div class="container">
-            <h2>THE NETWORK ROI</h2>
-            <p style="font-size: 1.3rem; color: #fff; margin-bottom: 2rem;">Four advantages that deliver measurable returns within your first quarter.</p>
+            <h2>HOW NETWORKS SOURCE VETTED CREATORS</h2>
+            <p style="font-size: 1.3rem; color: #fff; margin-bottom: 2rem;">The badge system signals quality, reduces risk, and accelerates deal flow. Networks access pre-vetted talent with verified credits and proven production quality.</p>
             <div class="roi-grid">
                 <div class="roi-card">
                     <div class="roi-number">10x</div>
