FINAL FIX: Update Investors to BUSINESS MODEL, Beta to WHO BETA IS FOR

--- a/public/beta/index.html
+++ b/public/beta/index.html
@@ -117,8 +117,8 @@
 
     <section>
         <div class="container">
-            <h2>ENTER THE ECOSYSTEM</h2>
-            <p style="font-size: 1.2rem; color: #fff; margin-bottom: 3rem; text-align: center;">Choose your path. Each badge unlocks different levels of access and ownership.</p>
+            <h2>WHO BETA IS FOR</h2>
+            <p style="font-size: 1.2rem; color: #fff; margin-bottom: 2rem; text-align: center;">Beta users get early access to post roles, hire crews, and launch productions. Choose your path:</p>
             <div class="grid grid-2" style="margin-top: 2rem;">
                 <div style="background: var(--card); border: 1px solid var(--border); padding: 2.5rem; border-left: 4px solid #FFD700;">
                     <h3 style="color: #FFD700; margin-bottom: 1rem;">FOR CREATORS</h3>
