--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -112,25 +112,25 @@
 
     <section>
         <div class="container">
-            <h2>THE OPPORTUNITY</h2>
+            <h2>THE BUSINESS MODEL</h2>
             <div class="grid grid-2">
                 <div>
-                    <h3>The Gap</h3>
-                    <p>Audiences have moved to vertical video, but premium storytelling has not. "Clip Fatigue" is real. The market demands assets, not just noise.</p>
+                    <h3>How VERTIKAL, LLC. Creates Value</h3>
+                    <p>Premium vertical content attracts viewers. Advertisers pay premium rates for verified cultural content. Revenue flows to creators. Creators hire crews. Economic activity compounds inside the platform.</p>
                 </div>
                 <div>
-                    <h3>The Leverage</h3>
-                    <p>Black culture is the #1 export of the internet. By financializing this influence through ownership, we create a defensible moat that traditional platforms cannot replicate.</p>
+                    <h3>Why Infrastructure Wins Long-Term</h3>
+                    <p>We are not competing on content volume. We are building the hiring marketplace, IP ownership layer, and talent verification system that makes vertical cinema production scalable and profitable.</p>
                 </div>
             </div>
             <div class="grid grid-2" style="margin-top: 3rem;">
                 <div>
-                    <h3 style="color: var(--green);">Market Inefficiency</h3>
-                    <p>Black creators drive disproportionate engagement but receive the smallest slice of capitalization. Vertikal corrects this structural gap.</p>
+                    <h3 style="color: var(--green);">Network Effects</h3>
+                    <p>More creators → more jobs → more applicants → more content → more viewers → higher ad rates → more jobs. The flywheel compounds.</p>
                 </div>
                 <div>
-                    <h3 style="color: var(--green);">Closed-Loop Economics</h3>
-                    <p>Originals incubated internally. Networks retain IP rights. Distribution scales via FAST/SVOD licensing. Margin expansion at every layer.</p>
+                    <h3 style="color: var(--green);">IP Ownership Layer</h3>
+                    <p>Creators retain ownership. Networks license distribution rights. VERTIKAL, LLC. facilitates transactions. Value accrues to asset owners, not platform.</p>
                 </div>
             </div>
         </div>
