Add production-safe badge system + VIBE™ to all pages

--- a/public/creators/nate-hosseini/index.html
+++ b/public/creators/nate-hosseini/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nate Hosseini | VERTIKAL</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
     <style>
         :root {
             --bg: #050505; --card: #0a0a0a; --text: #ffffff; --muted: #888; --border: #222;
@@ -48,7 +49,10 @@
 
     <div class="container">
         <div class="profile-header">
-            <img src="/assets/profiles/nate-hosseini.jpg" alt="Nate Hosseini" class="profile-img" onerror="this.src='/assets/Vertikal_Logo_Master.png'">
+            <div style="position: relative;">
+                <div class="founding-50-badge">FOUNDING 50</div>
+                <img src="/assets/profiles/nate-hosseini.jpg" alt="Nate Hosseini" class="profile-img" onerror="this.src='/assets/Vertikal_Logo_Master.png'">
+            </div>
             <div class="profile-info">
                 <h1>Nate Hosseini</h1>
                 <span class="badge">Founding 50</span>
