--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -96,8 +96,8 @@
             <a href="https://vertikalapp.com">Main</a>
             <a href="https://vertikalapp.com/creators/">Creators</a>
             <a href="https://vertikalapp.com/networks/">Networks</a>
-            <a href="#" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;" onclick="event.preventDefault(); document.getElementById('demoModal').classList.add('active');">Watch Live Demo</a>
-            <a href="#deck" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Deck</a>
+            <a href="/demo" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Watch Live Demo</a>
+            <a href="/contact" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Request Deck</a>
         </div>
     </nav>
 
@@ -209,7 +209,7 @@
                     <p style="font-size: 1rem;">Premium short-form vertical series, long-form, and documentary content built for the 2–10 minute cinematic window.</p>
                 </div>
                 <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--blue);">
-                    <h3 style="color: var(--blue); margin-bottom: 1rem;">VIBE™ (VIBE™)</h3>
+                    <h3 style="color: var(--blue); margin-bottom: 1rem;">VIBE™</h3>
                     <p style="font-size: 1rem;">Live overlay audience layer. Real-time comments flow over content, creating shared viewing experiences without interruption.</p>
                 </div>
                 <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--green);">
