--- a/public/profiles/index.html
+++ b/public/profiles/index.html
@@ -32,6 +32,7 @@
 
     <!-- Joshua Roberts -->
     <a href="/profiles/joshua-roberts/" class="profile-card">
+      <div class="founding-50-badge">FOUNDING 50</div>
       <img src="/assets/profiles/joshua-roberts.jpg" alt="Joshua Roberts" />
       <h3>Joshua Roberts</h3>
       <p>Founder / Director</p>
@@ -39,6 +40,7 @@
 
     <!-- Evan -->
     <a href="/profiles/evan/" class="profile-card">
+      <div class="founding-50-badge">FOUNDING 50</div>
       <img src="/assets/profiles/evan.jpg" alt="Evan" />
       <h3>Evan</h3>
       <p>Producer / Operations</p>
@@ -46,6 +48,7 @@
 
     <!-- Joshua Argue -->
     <a href="/profiles/joshua-argue/" class="profile-card">
+      <div class="founding-50-badge">FOUNDING 50</div>
       <img src="/assets/profiles/joshua-argue.jpg" alt="Joshua Argue" />
       <h3>Joshua Argue</h3>
       <p>Creative Technologist</p>
@@ -53,6 +56,7 @@
 
     <!-- Joe Guidry -->
     <a href="/profiles/joe-guidry/" class="profile-card">
+      <div class="founding-50-badge">FOUNDING 50</div>
       <img src="/assets/profiles/joe-guidry.jpg" alt="Joe Guidry" />
       <h3>Joe Guidry</h3>
       <p>Cinematographer</p>
@@ -60,6 +64,7 @@
 
     <!-- Nate Hossini -->
     <a href="/profiles/nate-hosseini/" class="profile-card">
+      <div class="founding-50-badge">FOUNDING 50</div>
       <img src="/assets/profiles/nate-hosseini.jpg" alt="Nate Hossini" />
       <h3>Nate Hossini</h3>
       <p>Writer / Director</p>
@@ -67,6 +72,7 @@
 
     <!-- Antonio -->
     <a href="/profiles/antonio/" class="profile-card">
+      <div class="founding-50-badge">FOUNDING 50</div>
       <img src="/assets/profiles/antonio.jpg" alt="Antonio" />
       <h3>Antonio</h3>
       <p>Editor / Post-Production</p>
