--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -97,8 +97,8 @@
             <a href="https://vertikalapp.com">Main</a>
             <a href="https://vertikalapp.com/creators/">Creators</a>
             <a href="https://vertikalapp.com/investors/">Investors</a>
-            <a href="#" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;" onclick="event.preventDefault(); document.getElementById('demoModal').classList.add('active');">Watch Live Demo</a>
-            <a href="#partner" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Partner</a>
+            <a href="/demo" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Watch Live Demo</a>
+            <a href="/contact" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Partner</a>
         </div>
     </nav>
 
