Replace text badges with image badges on all profile pages

--- a/public/creators/antonio/index.html
+++ b/public/creators/antonio/index.html
@@ -49,9 +49,9 @@
 
     <div class="container">
         <div class="profile-header">
-            <div style="position: relative;">
-                <div class="founding-50-badge">FOUNDING 50</div>
+            <div class="profile-container">
                 <img src="/assets/profiles/antonio.jpg" alt="Antonio" class="profile-img" onerror="this.src='/assets/Vertikal_Logo_Master.png'">
+                <img src="/assets/badges/badge-founding50-gold.png" class="badge" alt="Founding 50">
             </div>
             <div class="profile-info">
                 <h1>Antonio</h1>
