--- a/public/profiles/index.html
+++ b/public/profiles/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Founding creators, operators, and builders shaping Vertikal." />
 
   <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 <body>
 <div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
@@ -32,48 +33,60 @@
 
     <!-- Joshua Roberts -->
     <a href="/profiles/joshua-roberts/" class="profile-card">
-      <div class="founding-50-badge">FOUNDING 50</div>
-      <img src="/assets/profiles/joshua-roberts.jpg" alt="Joshua Roberts" />
+      <div class="profile-container">
+        <img src="/assets/profiles/joshua-roberts.jpg" alt="Joshua Roberts" />
+        <img src="/assets/badges/badge-founding50-gold.png" class="badge" alt="Founding 50">
+      </div>
       <h3>Joshua Roberts</h3>
       <p>Founder / Director</p>
     </a>
 
     <!-- Evan -->
     <a href="/profiles/evan/" class="profile-card">
-      <div class="founding-50-badge">FOUNDING 50</div>
-      <img src="/assets/profiles/evan.jpg" alt="Evan" />
+      <div class="profile-container">
+        <img src="/assets/profiles/evan.jpg" alt="Evan" />
+        <img src="/assets/badges/badge-founding50-gold.png" class="badge" alt="Founding 50">
+      </div>
       <h3>Evan</h3>
       <p>Producer / Operations</p>
     </a>
 
     <!-- Joshua Argue -->
     <a href="/profiles/joshua-argue/" class="profile-card">
-      <div class="founding-50-badge">FOUNDING 50</div>
-      <img src="/assets/profiles/joshua-argue.jpg" alt="Joshua Argue" />
+      <div class="profile-container">
+        <img src="/assets/profiles/joshua-argue.jpg" alt="Joshua Argue" />
+        <img src="/assets/badges/badge-founding50-gold.png" class="badge" alt="Founding 50">
+      </div>
       <h3>Joshua Argue</h3>
       <p>Creative Technologist</p>
     </a>
 
     <!-- Joe Guidry -->
     <a href="/profiles/joe-guidry/" class="profile-card">
-      <div class="founding-50-badge">FOUNDING 50</div>
-      <img src="/assets/profiles/joe-guidry.jpg" alt="Joe Guidry" />
+      <div class="profile-container">
+        <img src="/assets/profiles/joe-guidry.jpg" alt="Joe Guidry" />
+        <img src="/assets/badges/badge-founding50-gold.png" class="badge" alt="Founding 50">
+      </div>
       <h3>Joe Guidry</h3>
       <p>Cinematographer</p>
     </a>
 
     <!-- Nate Hossini -->
     <a href="/profiles/nate-hosseini/" class="profile-card">
-      <div class="founding-50-badge">FOUNDING 50</div>
-      <img src="/assets/profiles/nate-hosseini.jpg" alt="Nate Hossini" />
+      <div class="profile-container">
+        <img src="/assets/profiles/nate-hosseini.jpg" alt="Nate Hossini" />
+        <img src="/assets/badges/badge-founding50-gold.png" class="badge" alt="Founding 50">
+      </div>
       <h3>Nate Hossini</h3>
       <p>Writer / Director</p>
     </a>
 
     <!-- Antonio -->
     <a href="/profiles/antonio/" class="profile-card">
-      <div class="founding-50-badge">FOUNDING 50</div>
-      <img src="/assets/profiles/antonio.jpg" alt="Antonio" />
+      <div class="profile-container">
+        <img src="/assets/profiles/antonio.jpg" alt="Antonio" />
+        <img src="/assets/badges/badge-founding50-gold.png" class="badge" alt="Founding 50">
+      </div>
       <h3>Antonio</h3>
       <p>Editor / Post-Production</p>
     </a>
