Fix: Add homepage VIBE video + fix badge paths on all landing pages

--- a/public/beta/index.html
+++ b/public/beta/index.html
@@ -145,22 +145,22 @@
             <p style="font-size: 1.2rem; color: #fff; margin-bottom: 2rem;">The V Badge system creates a defensible layer of quality. It signals contribution, priority, and access. Earned, not bought.</p>
             <div class="grid grid-4" style="margin-top: 2rem;">
                 <div class="badge-card" style="border-left: 4px solid #FFD700;">
-                    <div class="badge-icon b-gold">V</div>
+                    <img src="/assets/badges/badge-founding50-gold.png" alt="Gold Badge" style="width: 80px; height: 80px; margin-bottom: 1rem; object-fit: contain;">
                     <h3 style="color: #FFD700;">Gold</h3>
                     <p style="font-size: 0.9rem;">Founding 50 creators. Highest priority, founding equity, permanent ownership signal.</p>
                 </div>
                 <div class="badge-card" style="border-left: 4px solid #2962FF;">
-                    <div class="badge-icon b-blue">V</div>
+                    <img src="/assets/badges/badge-verified-blue 2.png" alt="Blue Badge" style="width: 80px; height: 80px; margin-bottom: 1rem; object-fit: contain;">
                     <h3 style="color: #2962FF;">Blue</h3>
                     <p style="font-size: 0.9rem;">Visionary creators (51-200). Priority access, crew posting privileges, elevated visibility.</p>
                 </div>
                 <div class="badge-card" style="border-left: 4px solid #00C853;">
-                    <div class="badge-icon b-green">V</div>
+                    <img src="/assets/badges/badge-investor-green.png" alt="Green Badge" style="width: 80px; height: 80px; margin-bottom: 1rem; object-fit: contain;">
                     <h3 style="color: #00C853;">Green</h3>
                     <p style="font-size: 0.9rem;">Investors. Priority deal flow, founding equity positions, permanent ownership signals.</p>
                 </div>
                 <div class="badge-card" style="border-left: 4px solid #B0BEC5;">
-                    <div class="badge-icon b-titanium">V</div>
+                    <img src="/assets/badges/badge-network-titanium.png" alt="Titanium Badge" style="width: 80px; height: 80px; margin-bottom: 1rem; object-fit: contain;">
                     <h3 style="color: #B0BEC5;">Titanium</h3>
                     <p style="font-size: 0.9rem;">Networks. Studio-level authority, priority access to vetted talent, early deal flow.</p>
                 </div>
