--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -148,7 +148,7 @@
         <div class="container">
             <h2 style="border-color: var(--gold);">YOUR BADGE</h2>
             <div class="badge-row" style="border-left: 4px solid var(--gold);">
-                <img src="/assets/badges/badge-gold.jpg" alt="Gold V Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
+                <img src="/assets/badges/badge-founding50-gold.png" alt="Gold V Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--gold);">Gold — Founding 50</h3>
                     <p style="margin:0;">The highest creator status. Algorithmic priority, founding equity, and permanent ownership signal. Capped at 50. Once full, this tier closes forever.</p>
