--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,21 @@
         <p style="color: #FFD700; letter-spacing: 0.2em; text-transform: uppercase; font-weight: 700; margin-bottom: 1rem;">VERTIKAL, LLC.</p>
         <h1 class="hero-text">BUILD. OWN. EARN.<br>IN VERTICAL CINEMA.</h1>
         <p style="color: #fff; font-size: 1.2rem; max-width: 700px; margin-bottom: 2rem;">VERTIKAL, LLC. is the infrastructure for creators to launch productions, hire crews, retain IP, and turn watch time into real economic opportunity.</p>
+        
+        <!-- HOMEPAGE VIBE VIDEO -->
+        <div style="margin: 2rem 0; max-width: 420px; border-radius: 18px; overflow: hidden;">
+            <video
+                src="/demo/test-video.mp4"
+                autoplay
+                muted
+                loop
+                playsinline
+                preload="metadata"
+                data-vibe="true"
+                style="width: 100%; height: auto; display: block;"
+            ></video>
+        </div>
+        
         <div style="margin-top: 2rem;">
             <a href="/apply/" class="btn btn-primary">Apply to Build</a>
             <a href="/demo" class="btn">Watch the Demo</a>
