--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -140,7 +140,7 @@
         <div class="container">
             <h2>EARLY CAPITAL RECOGNITION</h2>
             <div class="badge-row">
-                <img src="/assets/badges/badge-investor.jpg" alt="Green Investor Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
+                <img src="/assets/badges/badge-investor-green.png" alt="Green Investor Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--green);">Green Investor Badge</h3>
                     <p style="margin:0; font-size: 1.1rem;">Capital partners funding infrastructure and content production. Investors gain priority access to deal flow and founding equity positions. Vertikal converts premium watch time into advertiser revenue, which funds creator payments, job opportunities, and IP ownership. Early investors secure permanent ownership signals in the ecosystem.</p>
