--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -143,7 +143,7 @@
         <div class="container">
             <h2>THE TITANIUM ADVANTAGE</h2>
             <div class="badge-row">
-                <img src="/assets/badges/badge-titanium.jpg" alt="Titanium Network Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
+                <img src="/assets/badges/badge-network-titanium.png" alt="Titanium Network Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--titanium);">Titanium Network Partner</h3>
                     <p style="margin:0; font-size: 1.1rem;">Studio-level authority. Networks gain priority access to vetted creator talent, early deal flow on franchise IP, and syndication opportunities. The badge system creates trust. Trust accelerates licensing. Vertical-first content scales across FAST channels and SVOD platforms while creators retain IP ownership.</p>
