Website fixes: APPLY button redirect, video cropping, badges, VIBE effect

--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creators • Vertikal</title>
-    <link rel="canonical" href="https://creators.vertikalapp.com">
+    <link rel="canonical" href="/apply">
     
     <!-- Favicon & PWA -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -215,5 +215,6 @@
             setTimeout(() => { modal.style.display = 'none'; }, 500);
         }
     </script>
+<script src="/assets/js/vibe-danmu.js"></script>
 </body>
 </html>
