--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,10 @@
     /* SMOOTH SCROLL */
     html { scroll-behavior: smooth; }
     </style>
-</head>
+<style id="badge-overlay-style">
+.badge-wrapper{position:relative;display:inline-block}
+.badge-overlay{position:absolute;top:-8px;right:-8px;width:40px;height:40px;z-index:999;border-radius:50%}
+</style></head>
 <body>
 <div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
   CINEMA ISN'T DYING — IT'S ROTATING
