--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -81,7 +81,10 @@
             .chart-container { min-height: 250px; padding: 1.5rem; }
         }
     </style>
-</head>
+<style id="badge-overlay-style">
+.badge-wrapper{position:relative;display:inline-block}
+.badge-overlay{position:absolute;top:-8px;right:-8px;width:40px;height:40px;z-index:999;border-radius:50%}
+</style></head>
 <body>
 <div class="vk-tagline" style="width:100%;text-align:center;margin:18px 0 10px 0;letter-spacing:.08em;font-size:12px;opacity:.85;">
   CINEMA ISN'T DYING — IT'S ROTATING
