Fix: Standardize all apply buttons to /apply/ and add Zapier setup docs
- Fixed apply button URLs (full URLs → relative paths)
- Added role parameter handling to apply form
- Created comprehensive Zapier setup prompt
- Created mobile app form integration guide
- All apply buttons now correctly link to /apply/

--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -272,7 +272,7 @@
                 Full beta expected June with at least 50 creators.
             </p>
             <a href="https://vertikalapp.com/demo" class="btn" style="margin-right: 1rem;">Join Demo Waitlist</a>
-            <a href="https://vertikalapp.com/apply" class="btn" style="background: transparent; border-color: #FFD700; color: #FFD700;">Apply for Founding 50</a>
+            <a href="/apply/" class="btn" style="background: transparent; border-color: #FFD700; color: #FFD700;">Apply for Founding 50</a>
         </div>
     </div>
 
