--- a/public/apply/index.html
+++ b/public/apply/index.html
@@ -46,7 +46,7 @@
         <h1>Apply For Badge</h1>
         <p>Join the Founding 50 creators building the future of vertical cinema.</p>
 
-        <form data-zapier-form="apply" data-role="creator">
+        <form data-zapier-form="apply" data-role="creator" id="applyForm">
             <div class="form-group">
                 <label for="name">Full Name *</label>
                 <input type="text" id="name" name="name" required>
@@ -82,8 +82,19 @@
 
     <script src="/assets/js/zapierForms.js"></script>
     <script>
+        // Set role from URL parameter or default to creator
+        const urlParams = new URLSearchParams(window.location.search);
+        const roleParam = urlParams.get('role') || 'creator';
+        const form = document.getElementById('applyForm');
+        form.dataset.role = roleParam;
+        
+        // Set role select if coming from network/investor pages
+        if (roleParam === 'network') {
+            document.getElementById('role').value = 'network';
+        }
+        
         // Add portfolio URL to extra data
-        document.querySelector('form[data-zapier-form="apply"]').addEventListener('submit', function(e) {
+        form.addEventListener('submit', function(e) {
             const portfolio = document.getElementById('portfolio').value;
             if (portfolio) {
                 this.dataset.extra = JSON.stringify({ portfolio });
