Remove old Zapier form attributes

--- a/public/apply/index.html
+++ b/public/apply/index.html
@@ -46,7 +46,7 @@
         <h1>Apply For Badge</h1>
         <p>Join the Founding 50 creators building the future of vertical cinema.</p>
 
-        <form data-zapier-form="apply" data-role="creator" id="applyForm">
+        <form id="applyForm">
             <div class="form-group">
                 <label for="name">Full Name *</label>
                 <input type="text" id="name" name="name" required>
